[package]
name = "TSA_VR_2023_Web_API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
serde_with = "3.0.0"
urlencoding = "2.1.2"

